--- a/README.html
+++ b/README.html
@@ -696,372 +696,165 @@ considered a post processing step.</p></div>
 
 (*) : Currently these analyses additional analyses don't compile due to recent changes in the Flowable class
 
+Done
+~~~~
+1. Comments in the sense that they are removed by sglri (tests/syntax/comment.php)
+2. Simple assignments (tests/simple.php) -- Should we add contexts?
+3. If-constructs with no else clauses (tests/controlstruct/if.php)
+4. Ifelse constructs (tests/controlstruct/ifelse.php)
+5. Double quoted strings (tests/basicdatatypes/scalar/string/doublequoted.php)
+6. Strings with escapes characters (tests/basicdatatypes/scalar/string/doublequoted.php)
+7. Simple interprocedural analysis (tests/functions/id.php, tests/functions/id2.php)
+8. While-construct (tests/controlstruct/while.php)
+9. Booleans (tests/basicdatatypes/scalar/boolean/boolean.php)
+10. User-defined functions without parameters (tests/functions/simple.php)
+11. Return statement (tests/functions/simple.php)
+12. Recursive functions (tests/functions/fac.php, tests/functions/recursive.php)
+13. Print function (tests/print.php)
+14. Echo function (tests/echo.php) - Missing case when echo receives something that not a string as input.
+15. Incrementing/Decrementing Operators (tests/preposincrement.php tests/preposdecrement.php)
+16. Assignment operators (Arithmetic, String and Bitwise) (tests/assignop.php)
+17. Comparison Operators (tests/basicdatatypes/scalar/boolean/boolop.php)
+18. Logical Operators (tests/basicdatatypes/scalar/boolean/logicop.php)
+19. Supports HTML Embedding (tests/syntax/htmlembedding.php)
+20. InlineHTML implemented (tests/syntax/advancedescaping.php)
+21. Standard tags (tests/syntax/phptagsimple.php)
+22. ASP tags (tests/syntax/phptagasp.php)
+23. "In PHP 5.2 and earlier, the parser does not allow the &lt;?php opening tag to be the only thing in a file. This is allowed as of PHP 5.3." (tests/syntax/phptagstandard.php)
+24. Circular functions (tests/functions/recursive2.php)
+25. Else-if (tests/controlstruct/elseif.php)
+26. AltIf, AltIfElse (tests/controlstruct/ifelsealt.php)
+27. AltWhile (tests/controlstruct/while3.php)
+28. Ternary conditional operator (tests/ternaryconditionalop.php)
+29. Creating/modifying with square bracket syntax
+30. ReferenceAssign (tests/variables/varreference.php)
+31. IndirectReference (tests/variables/indirectrefvar.php)
+32. ParameterReference (tests/assign.php)
+33. SingleQuoted strings (tests/basicsdatatypes/scalar/string/singlequoted.php)
+34. Negative integers not implemented (tests/basicdatatypes/scalar/integer/integerliteral.php)
+35. Octal integers not implemented (tests/basicdatatypes/scalar/integer/integerliteral.php)
+36. Hexa integers not implemented (tests/basicdatatypes/scalar/integer/integerliteral.php)
+37. Floating-point types (tests/basicdatatypes/scalar/float/*)
+38. NULL type (tests/basicdatatypes/null.php)
+39. StringAccess (tests/basicdatatypes/scalar/string/stringindex.php)
+40. None (tests/basicdatatypes/compound/array/arraycreation3.php)
+41. Standard array creation (tests/basicdatatypes/compound/array/arraycreation*.php) (check nesting)
+42. Assignments in conditions (tests/controlstruct/conditional.php)
+43. DoWhile (tests/controlstruct/dowhile.php, tests/controlstruct/dowhilebreak.php)
+44. Break for while and dowhile (tests/controlstruct/whilebreak.php)
+45. Continue (tests/controlstruct/whilecontinue.php)
+46. For (tests/controlstruct/for.php)
+47. function with array as parameter (tests/functions/funtakesarray.php)
+48. function within a function (tests/functions/funfun.php)
 
-Supported PHP5 features</tt></pre>
+Non-Supported PHP5 features</tt></pre>
 </div></div>
-<div class="olist arabic"><ol class="arabic">
-<li>
-<p>
-Supports HTML Embedding (tests/syntax/htmlembedding.php)
-</p>
-</li>
-<li>
-<p>
-While-construct (tests/controlstruct/while.php)
-</p>
-</li>
-<li>
-<p>
-Function calls
-</p>
-</li>
-<li>
-<p>
-Booleans (tests/basicdatatypes/scalar/boolean/boolean.php)
-</p>
-</li>
-<li>
-<p>
-Double quoted strings (basicdatatypes/scalar/string/doublequoted.php)
-</p>
-</li>
-<li>
-<p>
-Creating/modifying with square bracket syntax
-</p>
-</li>
-<li>
-<p>
-Ifelse constructs (tests/controlstruct/ifelse.php)
-</p>
-</li>
-<li>
-<p>
-User-defined functions without parameters (tests/functions/simple.php)
-</p>
-</li>
-<li>
-<p>
-Recursive functions (I believe not all recursive functions are supported) (tests/functions/fac.php)
-</p>
-</li>
-<li>
-<p>
-Return statement (tests/functions/fac.php)
-</p>
-</li>
-</ol></div>
-</div>
-</div>
-<div class="sect1">
-<h2 id="_non_supported_php5_features">7. Non-Supported PHP5 features</h2>
-<div class="sectionbody">
 <div class="sect2">
-<h3 id="_general">7.1. General</h3>
+<h3 id="_parser">6.1. Parser</h3>
 <div class="olist arabic"><ol class="arabic">
-<li>
-<p>
-Print, Echo functions (semantics, flow)
-</p>
-</li>
-<li>
-<p>
-PreInc and PostInc not implemented (tests/postinc.php, tests/preposincrement.php)
-</p>
-</li>
-<li>
-<p>
-PlusAssign (tests/plusassign.php)
-</p>
-</li>
-<li>
-<p>
-XorAssign not implemented (tests/efficientswap.php)
-</p>
-</li>
-<li>
-<p>
-Greater, GreaterEqual, Less (tests/controlstruct/elseif.php)
-</p>
-</li>
-<li>
-<p>
-Exceptions (tests/exceptions/*)
-</p>
-</li>
-<li>
-<p>
-Not (tests/exceptions/exception.php)
-</p>
-</li>
-<li>
-<p>
-Classes and Objects (tests/oo/*)
-</p>
-</li>
-</ol></div>
-</div>
-<div class="sect2">
-<h3 id="_syntax">7.2. Syntax</h3>
-<div class="olist arabic"><ol class="arabic">
-<li>
-<p>
-TemplateDocument (tests/syntax/phptagecho.php, tests/syntax/phptagscript.php)
-</p>
-</li>
-<li>
-<p>
-Comments in the sense that they are removed by sglri
-</p>
-</li>
-<li>
-<p>
-InlineHTML not implemented (tests/syntax/advancedescaping.php)
-</p>
-</li>
-<li>
-<p>
-Error in ATerm: DQContent takes 1 arguments, but 3 were given. (tests/syntax/phptagsimple.php)
-</p>
-</li>
-<li>
-<p>
-ASPOpenTag not implemented (still runs because it&#8217;s ignored) (tests/syntax/phptagasp.php)
-</p>
-</li>
-<li>
-<p>
-"In PHP 5.2 and earlier, the parser does not allow the &lt;?php opening tag to be the only thing in a file. This is allowed as of PHP 5.3." (tests/syntax/phptagstandard.php, tests/syntax/instructionseparation.php)
-</p>
-</li>
 <li>
 <p>
 sglri does not allow combination of different sytles of open-close tags (tests/syntax/phptagcombination.php)
 </p>
 </li>
-</ol></div>
-</div>
-<div class="sect2">
-<h3 id="_types">7.3. Types</h3>
-<div class="olist arabic"><ol class="arabic">
 <li>
 <p>
-SingleQuoted strings not implemented (tests/basicsdatatypes/scalar/string/singlequoted.php)
+sglri seems to now allow lambdas                                        (tests/basicsdatatypes/callback/callbackclosure.php, tests/functions/lambda.php)
 </p>
 </li>
 <li>
 <p>
-Heredoc (tests/basicsdatatypes/scalar/string/heredoc.php)
-</p>
-</li>
-<li>
-<p>
-Nowdoc (tests/basicsdatatypes/scalar/string/nowdoc.php)
-</p>
-</li>
-<li>
-<p>
-StringAccess not implemented (tests/basicsdatatypes/scalar/string/stringindex.php)
-</p>
-</li>
-<li>
-<p>
-Negative integers not implemented (tests/basicdatatypes/scalar/integer/integerliteral.php)
-</p>
-</li>
-<li>
-<p>
-Octal integers not implemented (tests/basicdatatypes/scalar/integer/integerliteral.php)
-</p>
-</li>
-<li>
-<p>
-Hexa integers not implemented (tests/basicdatatypes/scalar/integer/integerliteral.php)
-</p>
-</li>
-<li>
-<p>
-Floating-point types (tests/basicdatatypes/scalar/float/*)
-</p>
-</li>
-<li>
-<p>
-Standard array creation not implemented (tests/basicdatatypes/compound/array/arraycreation*.php)
-</p>
-</li>
-<li>
-<p>
-ListAssign (tests/controlstruct/whilebreak.php)
-</p>
-</li>
-<li>
-<p>
-No support for classes/objects (tests/basicdatatypes/compound/object/*)
-</p>
-</li>
-<li>
-<p>
-Resources are not implemented (no test file)
-</p>
-</li>
-<li>
-<p>
-NULL type not implemented (tests/basicdatatypes/null.php)
-</p>
-</li>
-<li>
-<p>
-Callback (tests/basicdatatypes/callback/callback.php)
-</p>
-</li>
-<li>
-<p>
-tests/basicdatatypes/typejuggling.php analysis is wrong
+sglri does not support Goto                                             (tests/controlstruct/goto.php)
 </p>
 </li>
 </ol></div>
 </div>
 <div class="sect2">
-<h3 id="_variables">7.4. Variables</h3>
+<h3 id="_various">6.2. Various</h3>
 <div class="olist arabic"><ol class="arabic">
 <li>
 <p>
-Use of $GLOBALS and variable scope (tests/variables/varscope/globals*)
+TemplateDocument                           (tests/syntax/phptagecho.php, tests/syntax/phptagscript.php)
 </p>
 </li>
 <li>
 <p>
-IndirectReference not implemented (tests/variables/indirectrefvar.php)
+Different code snippets in the same file   (tests/syntax/instructionseparation.php)
 </p>
 </li>
 <li>
 <p>
-ReferenceAssign not implemented (tests/variables/varreference.php)
+Exceptions                                 (tests/exceptions/*)
 </p>
 </li>
 <li>
 <p>
-InternalFunction not implemented (tests/variables/varmanage/isset.php, tests/varmanage/empty.php, tests/include.php)
+Classes and Objects                        (tests/oo/<strong>, tests/basicdatatypes/compound/object/</strong>)
 </p>
 </li>
 <li>
 <p>
-Unset not implemented (tests/variables/varmanage/unset.php)
+Resources                                  (no test file)
 </p>
 </li>
 <li>
 <p>
-Superglobals (not sure because can&#8217;t test since SingleQuoted is not working)
+Callback                                   (tests/basicdatatypes/callback/callback.php)
 </p>
 </li>
 <li>
 <p>
-DeclareGlobal not implemented (tests/variables/varscope/global.php)
+Heredoc                                    (tests/basicsdatatypes/scalar/string/heredoc.php)
 </p>
 </li>
 <li>
 <p>
-define function for constants not implemented (tests/variables/constantvar2.php)
+Nowdoc                                     (tests/basicsdatatypes/scalar/string/nowdoc.php)
 </p>
 </li>
 <li>
 <p>
-Constant variables (tests/constantvar.php)
+Type Juggling                              (tests/basicdatatypes/typejuggling.php)
 </p>
 </li>
 <li>
 <p>
-DeclareStatic not implemented (tests/varscope/static.php)
-</p>
-</li>
-</ol></div>
-</div>
-<div class="sect2">
-<h3 id="_control_structures">7.5. Control Structures</h3>
-<div class="olist arabic"><ol class="arabic">
-<li>
-<p>
-Foreach not implemented (tests/foreach.php)
+InternalFunction                          (tests/variables/varmanage/isset.php, tests/varmanage/empty.php, tests/include.php)
 </p>
 </li>
 <li>
 <p>
-If-constructs don&#8217;t work if they don&#8217;t have else clauses (tests/controlstruct/if.php)
+Unset                                     (tests/variables/varmanage/unset.php)
 </p>
 </li>
 <li>
 <p>
-Ternary conditional operator not implemented (tests/ternaryconditionalop.php)
+Use of $GLOBALS and variable scope        (tests/variables/varscope/globals*)
 </p>
 </li>
 <li>
 <p>
-Short-circuiting
+Superglobals                              (no test file)
 </p>
 </li>
 <li>
 <p>
-Else-if (tests/controlstruct/elseif.php)
+DeclareGlobal                             (tests/variables/varscope/global.php)
 </p>
 </li>
 <li>
 <p>
-AltIf (tests/controlstruct/ifelsealt.php)
+define function for constants             (tests/variables/constantvar2.php)
 </p>
 </li>
 <li>
 <p>
-AltWhile (tests/controlstruct/while3.php)
+Constant variables                        (tests/constantvar.php)
 </p>
 </li>
 <li>
 <p>
-DoWhile (tests/controlstruct/dowhile.php, tests/controlstruct/dowhilebreak.php)
-</p>
-</li>
-<li>
-<p>
-For (tests/controlstruct/for.php)
-</p>
-</li>
-<li>
-<p>
-Break (tests/controlstruct/whilebreak.php)
-</p>
-</li>
-<li>
-<p>
-Continue (tests/controlstruct/whilecontinue.php)
-</p>
-</li>
-<li>
-<p>
-Switch (tests/controlstruct/switch.php)
-</p>
-</li>
-<li>
-<p>
-Declare (tests/controlstruct/declare.php)
-</p>
-</li>
-<li>
-<p>
-sglri does not support Goto (tests/controlstruct/goto.php)
-</p>
-</li>
-<li>
-<p>
-empty block (tests/functions/funconditional.php)
-</p>
-</li>
-</ol></div>
-</div>
-<div class="sect2">
-<h3 id="_functions">7.6. Functions</h3>
-<div class="olist arabic"><ol class="arabic">
-<li>
-<p>
-sglri seems to now allow lambdas! (tests/basicsdatatypes/callback/callbackclosure.php, tests/functions/lambda.php)
+DeclareStatic not implemented             (tests/varscope/static.php)
 </p>
 </li>
 <li>
@@ -1071,27 +864,42 @@ Recursive functions with static variables (tests/functions/countTo10.php)
 </li>
 <li>
 <p>
-conditional functions (tests/functions/funconditional.php)
+Short-circuiting                          (no test file)
 </p>
 </li>
 <li>
 <p>
-function within a function (tests/functions/funfun.php)
+Declare                                   (tests/declare.php)
 </p>
 </li>
 <li>
 <p>
-function with array as parameter (tests/functions/funtakesarray.php)
+ListAssign                                (tests/controlstruct/whilebreak.php)
 </p>
 </li>
 <li>
 <p>
-function with default parameter (tests/functions/fundefaultpar.php)
+Foreach                                   (tests/controlstruct/foreach.php)
 </p>
 </li>
 <li>
 <p>
-FunctionDeclRef (tests/functions/funretref.php)
+Switch                                    (tests/controlstruct/switch.php)
+</p>
+</li>
+<li>
+<p>
+FunctionDeclRef                           (tests/functions/funretref.php)
+</p>
+</li>
+<li>
+<p>
+function with default parameter           (tests/functions/fundefaultpar.php)
+</p>
+</li>
+<li>
+<p>
+conditional functions                     (tests/functions/funconditional.php)
 </p>
 </li>
 </ol></div>
@@ -1099,47 +907,12 @@ FunctionDeclRef (tests/functions/funretref.php)
 </div>
 </div>
 <div class="sect1">
-<h2 id="_todo">8. TODO</h2>
-<div class="sectionbody">
-<div class="olist arabic"><ol class="arabic">
-<li>
-<p>
-Extend test suite (missing test cases for classes and objects)
-1.1 It would be nice to have a golden suite to check consistency of the project in case of major changes
-</p>
-</li>
-<li>
-<p>
-Improve output visualization
-2.1 Allow both usage of check and visualization of var &#8594; set of types at the end of the program
-2.2 Allow visualization of the flow with a graph (difficult to debug functions at the moment)
-</p>
-</li>
-<li>
-<p>
-Implement items not supported
-</p>
-</li>
-</ol></div>
-</div>
-</div>
-<div class="sect1">
-<h2 id="_mfp_minimal_fixed_point">9. MFP - Minimal Fixed Point</h2>
-<div class="sectionbody">
-<div class="paragraph"><p>Elaborate</p></div>
-<div class="sect2">
-<h3 id="_embellished_monotone_framework">9.1. Embellished monotone framework</h3>
-<div class="paragraph"><p>Elaborate</p></div>
-</div>
-</div>
-</div>
-<div class="sect1">
-<h2 id="_usage_and_graph_generation">10. Usage and Graph Generation</h2>
+<h2 id="_usage_and_graph_generation">7. Usage and Graph Generation</h2>
 <div class="sectionbody">
 </div>
 </div>
 <div class="sect1">
-<h2 id="_notes_on_the_language">11. Notes on the language</h2>
+<h2 id="_notes_on_the_language">8. Notes on the language</h2>
 <div class="sectionbody">
 <div class="paragraph"><p>PHP 5 is a high-order language.</p></div>
 <div class="ulist"><div class="title">Useful functions</div><ul>
@@ -1190,7 +963,7 @@ function_exists()
 <div id="footnotes"><hr /></div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2011-12-17 01:13:44 EET
+Last updated 2012-02-16 03:59:54 EET
 </div>
 </div>
 </body>
